--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@kjgl77/datav-vue3": "^1.7.2",
     "axios": "^1.6.8",
     "echarts": "^5.5.0",
+    "element-plus": "^2.8.3",
     "mockjs": "^1.1.0",
     "pnpm": "^9.10.0",
     "postcss-px-to-viewport": "^1.1.1",
